src/styles/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

$selection: rgb(193, 212, 226);
$dar-selection: rgb(75, 89, 99);

$primary: #2f4858;
$primary-dark: #111827;

$secondary: #17b169;
$secondary-dark: #e9b500;

// TAILWIND
$gray-7: #374151;

::-moz-selection,
::selection {
  background: $selection;
}

.dark ::-moz-selection,
.dark ::selection {
  background: rgb(75, 89, 99);
}

* {
  transition-duration: 200ms;
  transition-property: background-color, border-color;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}

body {
  overflow-x: hidden;
  background-color: white;
}

.dark body {
  background-color: $primary-dark;
}

#root {
  width: 100%;
  min-height: 100vh;
}

/* ANIMATIONS */

#home-title {
  animation: fadeInDownBig;
  animation-duration: 600ms;
}

#home-subtitle {
  animation: fadeInDownBig;
  animation-duration: 500ms;
}

#socials {
  animation: fadeInDownBig;
  animation-duration: 300ms;
}

#copied-div {
  animation: copiedAnimation 2s;
  bottom: -10vh;
}

@keyframes fadeInDownBig {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, -2000px, 0);
    transform: translate3d(0, -2000px, 0);
  }
  to {
    opacity: 1;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes bounce {
  15% {
    transform: translateY(0);
  }
  45%,
  55% {
    transform: translateY(-15px);
  }
  85% {
    transform: translateY(0);
  }
}

.animated__bounce {
  animation: bounce infinite ease-in-out;
  animation-duration: 3s;
}

.animated__fadeIn {
  animation: fadeIn 200ms linear;
}

@keyframes copiedAnimation {
  0% {
    bottom: -10vh;
  }
  15% {
    bottom: 5vh;
  }
  85% {
    bottom: 5vh;
  }
  100% {
    bottom: -10vh;
  }
}

/* Individual Items */
.titleSection {
  color: white;
  padding-left: calc(8.33% + 0.6rem);
  font-family: monospace;
}

.social-icon {
  .tooltip {
    opacity: 0;
    color: white;
    background: $secondary;
    transition: opacity 200ms 200ms;
    position: absolute;
    top: 0;
    left: 0;
    transform: translateY(-100%);
    padding: 4px 10px;
    border-radius: 2px;

    .arrow {
      width: 0;
      height: 0;
      border-left: 8px solid transparent;
      border-right: 8px solid transparent;
      border-top: 8px solid $secondary;
      transition: border-top-color 200ms 200ms;
      position: absolute;
      bottom: 0;
      transform: translate(0, 100%);
    }
  }

  &:hover .tooltip {
    opacity: 1;
  }
}

.dark .tooltip {
  background: $secondary-dark;

  .arrow {
    border-top-color: $secondary-dark;
  }
}

.dark .arrow {
  border-bottom: 8px solid $secondary-dark;
}

@media only screen and (max-width: 640px) {
  .arrow {
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid $secondary;
    border-bottom: 8px solid transparent;
    top: auto;
    bottom: 0;
    transform: translate(0, 100%);
  }

  .dark .arrow {
    border-top: 8px solid $secondary-dark;
    border-bottom: 8px solid transparent;
  }
}

/* SAY HELLO BUTTON */
.say-hello {
  position: fixed;
  top: 0;
  left: 0;
  margin-left: 2vw;
  margin-top: 2vw;
  border: 2px solid $primary;
  background: white;
  border-radius: 100px;
  padding: 0.7em 1.5em;
  text-decoration: none;
  font-family: sans-serif;
  font-size: 1.1em;
  color: $primary;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 150ms ease-in, background 150ms ease-in,
    color 150ms ease-in, margin 250ms linear, border-color 150ms ease-in;
  white-space: nowrap;
}

.dark .say-hello {
  border-color: white;
  color: white;
  background: $gray-7;
}

.say-hello:hover {
  background-color: $primary;
  color: white;
  transform: scale(1.08);
}

.dark .say-hello:hover {
  color: $gray-7;
  background: white;
}

.say-hello-scrolled {
  margin-top: calc(100vh - 2vw);
  margin-left: 98vw;
  transform: translate(-100%, -100%);
  font-size: 2em;
  padding: 0.4em;
  color: $primary;
  background-color: white;
  border-color: $primary;
}

.dark .say-hello-scrolled {
  color: white;
  border-color: white;
  background-color: $gray-7;
}

.say-hello-scrolled:hover {
  border-color: white;
  color: white;
  background-color: $primary;
  transform: translate(-100%, -100%);
}

.dark .say-hello-scrolled:hover {
  background: white;
  color: $gray-7;
  border-color: $gray-7;
}

/* Jumpy arrow */
#welcome-scroll {
  animation: jump-scroll 3s infinite;
}

@keyframes jump-scroll {
  0% {
    margin-bottom: 5px;
  }

  5% {
    margin-bottom: 0;
  }

  10% {
    margin-bottom: 2px;
  }

  15% {
    margin-bottom: 0;
  }

  95% {
    margin-bottom: 0;
  }

  100% {
    margin-bottom: 5px;
  }
}

// TOAST CUSTOMIZATION
:root {
  --toastify-color-success: #128650 !important;
  --toastify-icon-color-success: var(--toastify-color-success);
  --toastify-color-progress-success: var(--toastify-color-success);
}

@media screen and (min-width: 768px) {
  .social-icon {
    .tooltip {
      bottom: 0;
      top: auto;
      transform: translateY(100%);

      .arrow {
        border-bottom: 8px solid $secondary;
        border-top: 0 none;
        bottom: auto;
        top: 0;
        transform: translate(0, -100%);
      }

      .dark .arrow {
        border-bottom: 8px solid $secondary-dark;
      }
    }
  }
}

